src/objects/Target__c.object
<CustomObject>
    <description>Object with informations of Target values of the Indicators for the DMS Project</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country of the Distributor.</description>
        <formula>Distributor__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Devolution__c</fullName>
        <description>Indicator Returns.</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Devolution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Define the distributor.</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Target</relationshipLabel>
        <relationshipName>TargetDistributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dropsize__c</fullName>
        <description>Indicator Dropsize</description>
        <label>Dropsize</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Indicator Frequency.</description>
        <label>Frequency</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImpactedStores__c</fullName>
        <description>Indicator Impacted Stores.</description>
        <label>Impacted Stores</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders__c</fullName>
        <description>Indicator Orders.</description>
        <label>Orders</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesChannel__c</fullName>
        <description>Sales Channel of the Store.</description>
        <label>Sales Channel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Representative of the Goal.</description>
        <label>Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Targets</relationshipLabel>
        <relationshipName>Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sellout__c</fullName>
        <description>Indicator Sellout</description>
        <label>Sellout</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the goal.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DEACT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <description>Period of the Goal.</description>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <description>Value of the Target.</description>
        <label>Target Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Key__c</fullName>
        <description>Id of the target.</description>
        <externalId>true</externalId>
        <label>Target Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Target</label>
    <listViews>
        <fullName>ECO_Targets</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Distributor__c</columns>
        <columns>TargetDate__c</columns>
        <columns>TargetValue__c</columns>
        <columns>SalesChannel__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Target__c.ECO</value>
        </filters>
        <label>ECO Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hexagon_Targets</fullName>
        <columns>NAME</columns>
        <columns>SalesRep__c</columns>
        <columns>TargetDate__c</columns>
        <columns>Dropsize__c</columns>
        <columns>Frequency__c</columns>
        <columns>ImpactedStores__c</columns>
        <columns>Orders__c</columns>
        <columns>Devolution__c</columns>
        <columns>Sellout__c</columns>
        <columns>SalesChannel__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Target__c.Hexagon_Layout</value>
        </filters>
        <label>Hexagon Targets</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{YYYY}{MM}-{00}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <recordTypes>
        <fullName>ECO</fullName>
        <active>true</active>
        <description>Layout with information of the goal from the ECO report.</description>
        <label>ECO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hexagon_Layout</fullName>
        <active>true</active>
        <description>Layout with information of the goal from the Hexagon report.</description>
        <label>Hexagon</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>